fixed course compare table style and overflow making

--- a/src/views/SMS/SearchAndApply/SearchAndApply.css
+++ b/src/views/SMS/SearchAndApply/SearchAndApply.css
@@ -1134,11 +1134,23 @@ span.visually-hidden {
   padding: 16px 24px;
 }
 .table-container {
+  padding-top: 8px;
   position: relative;
   overflow: auto;
   white-space: nowrap;
 }
 
+.table-course-title {
+  font-size: 12px;
+  color: #a8a8a8;
+}
+.back-button {
+  display: flex;
+  align-items: center;
+  border: none;
+  background: none;
+  padding: 8px 0px;
+}
 .scroll-arrow {
   position: absolute;
   top: 50%;
